--- a/src/Scss/components/_navbar.scss
+++ b/src/Scss/components/_navbar.scss
@@ -72,7 +72,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      background-color: ab.$off-white;
+      background-color: ab.$light-white;
       z-index: 70;
       padding: 4rem;
       a {
